# secure-rag-pipeline

./: .env.example  .gitignore  .hadolint.yaml  .yamllint.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  security.md
.github/workflows/: ci.yml
app/: deps.py  main.py
app/api/: routes_chat.py  routes_health.py  routes_ingest.py
app/core/: config.py  logging.py  redaction.py  security.py
app/rag/: citations.py  filters.py  guardrails.py  pipeline.py  retrieval.py
app/store/: metadata.py  vector.py
app/tests/: conftest.py  test_authz.py  test_injection.py  test_logging.py  test_redaction.py
diagrams/: architecture.mmd
docs/: 01-architecture.md  02-threat-model.md  03-security-controls.md  04-tenant-isolation.md  05-red-team-tests.md
scripts/: dev.sh  redteam.sh  smoke.sh
secure_rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
